# hypergraph

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: performance.rs
src/: core.rs  dot.rs  lib.rs  private.rs
src/core/: actors.rs  bi_hash_map.rs  chunk.rs  collections.rs  debug.rs  defaults.rs  derive_trait.rs  dot.rs  entities.rs  error.rs  errors.rs  file.rs  hyperedges.rs  indexes.rs  iterator.rs  mod.rs  operations.rs  shared.rs  types.rs  utils.rs  vertices.rs
src/core/hyperedges/: add_hyperedge.rs  add_hyperedge_index.rs  clear_hyperedges.rs  contract_hyperedge.rs  contract_hyperedge_vertices.rs  count_hyperedges.rs  get_hyperedge.rs  get_hyperedge_vertices.rs  get_hyperedge_weight.rs  get_hyperedges.rs  get_hyperedges_connecting.rs  get_hyperedges_intersections.rs  get_internal_hyperedge.rs  get_internal_hyperedges.rs  join_hyperedges.rs  mod.rs  remove_hyperedge.rs  reverse_hyperedge.rs  update_hyperedge_vertices.rs  update_hyperedge_weight.rs
src/core/vertices/: add_vertex.rs  add_vertex_index.rs  count_vertices.rs  get_adjacent_vertices_from.rs  get_adjacent_vertices_to.rs  get_dijkstra_connections.rs  get_full_adjacent_vertices_from.rs  get_full_adjacent_vertices_to.rs  get_full_vertex_hyperedges.rs  get_internal_vertex.rs  get_internal_vertices.rs  get_vertex.rs  get_vertex_degree_in.rs  get_vertex_degree_out.rs  get_vertex_hyperedges.rs  get_vertex_weight.rs  get_vertices.rs  mod.rs  remove_vertex.rs  update_vertex_weight.rs
tests/: integration.rs  integration_contraction.rs  integration_dijkstra.rs  integration_iterator.rs  integration_join.rs  integration_main.rs  test.rs
tests/common/: mod.rs
tests_old/: integration_dijkstra.rs
