[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["data-structures", "mathematics", "science"]
description = "Hypergraph is data structure library to create a directed hypergraph in which an hyperedge can join any number of vertices."
edition = "2021"
exclude = [".github", "hypergraph.svg", "rustfmt.toml"]
keywords = ["data-structure", "graph", "hypergraph"]
license = "MIT"
name = "hypergraph"
readme = "README.md"
repository = "https://github.com/yamafaktory/hypergraph"
rust-version = "1.56"
version = "2.1.1"

[dependencies]
ahash = "0.8.3"
indexmap = { version = "2.0.0", features = ["rayon"] }
itertools = "0.11.0"
rayon = "1.7.0"
thiserror = "1.0.47"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "performance"
harness = false
