[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["data-structures", "mathematics", "science"]
description = "Hypergraph is a data structure library to create a directed hypergraph in which an hyperedge can join any number of vertices."
edition = "2021"
exclude = [".github", "hypergraph.svg", "rustfmt.toml"]
keywords = ["data-structure", "graph", "hypergraph"]
license = "MIT"
name = "hypergraph"
readme = "README.md"
repository = "https://github.com/yamafaktory/hypergraph"
rust-version = "1.74"
version = "2.1.2"

[dependencies]
ahash = "0.8.7"
bincode = "1.3.3"
itertools = "0.12.0"
quick_cache = "0.4.0"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["serde", "v7"] }

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = "0.3.18"

[[bench]]
name = "performance"
harness = false

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = "deny"
rust_2021_compatibility = "forbid"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
clippy_pedantic = "deny"
